# time-planner

./: .gitignore  AGENTS.md  DESIGN.md  README.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts  打开Tauri开发版.bat  打开当前任务小窗.bat  打开日计划.bat
.codex-tmp/merged-range-test/lib/: mergedRanges.js  mergedRanges.test.js  timeSlots.js
docs/: tauri-auto-update.md
electron/: main.cjs  miniWindowNoAutoResize.test.cjs  miniWindowSizing.cjs  miniWindowSizing.test.cjs  preload.cjs
scripts/: inline-dist.cjs  package-tauri.cjs  package-win.cjs  package-win.test.cjs  tauri-migration.test.cjs
src/: App.tsx  appUpdateButtonPlacement.test.cjs  confirmDialog.test.cjs  currentTaskJumpScroll.test.cjs  dayHeaderTodayButtonStyle.test.cjs  desktopBridgeTypes.test.ts  electron.d.ts  electronBridgeTypes.test.ts  miniPinIconStyle.test.cjs  miniPopupFeatures.test.cjs  nightFoldCollapseButton.test.cjs  styles.css  tauriStickyNoteWindow.test.cjs  timeTableTimePrefixLayout.test.cjs  types.ts  workspaceResizer.test.cjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src/components/: AppUpdatePanel.tsx  ConfirmDialog.tsx  CurrentTaskCard.tsx  DayHeader.tsx  ReviewPanel.tsx  SlotEditor.tsx  TimeTable.tsx
src/lib/: desktopBridge.ts  mergedRanges.test.ts  mergedRanges.ts  miniNeighborPreference.test.ts  miniNeighborPreference.ts  nightFold.test.ts  nightFold.ts  planUpdates.test.ts  planUpdates.ts  slotMoves.test.ts  slotMoves.ts  slotNeighbors.test.ts  slotNeighbors.ts  status.ts  taskProgress.test.ts  taskProgress.ts  timeSlots.ts
(+2 files in other folders)
