[package]
name = "time-block-planner"
version = "0.1.1"
description = "半小时日计划"
authors = ["time-block-planner"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0.150"
tauri = { version = "2", features = [] }
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
